Update intro, admin notify, and hint UI

--- a/tic-tac-toe/public/index.html
+++ b/tic-tac-toe/public/index.html
@@ -19,22 +19,12 @@
   <div class="intro-overlay" id="introOverlay">
     <div class="intro-card">
       <p class="eyebrow">Добро пожаловать</p>
-      <h2>Хочешь получить промокод в Telegram?</h2>
-      <p class="lede small">Бот пришлёт промо только тебе. Нажми “Да”, введи свой @ник (бот должен быть открыт) — и код улетит в личку при победе.</p>
-
-      <div class="intro-form hidden" id="introForm">
-        <label for="tgHandle" class="label">Твой Telegram @ник</label>
-        <input id="tgHandle" type="text" placeholder="@username" autocomplete="off" />
-        <p class="note compact">Убедись, что нажала Start у бота, иначе он не сможет написать.</p>
-        <div class="intro-actions space">
-          <button class="cta" id="introSave">Продолжить</button>
-          <button class="ghost-line" id="introSkipAfterForm">Пропустить</button>
-        </div>
-      </div>
-
+      <h2>Добро пожаловать на моё тестовое.</h2>
+      <p class="lede small">Моё резюме: <a class="link" href="https://clck.ru/3QmZh2" target="_blank" rel="noreferrer">clck.ru/3QmZh2</a></p>
+      <p class="lede small">Промокод отправляется автоматически в моего TG-бота.</p>
+      <p class="lede small">Если не сможете победить 3 раза подряд, я быстро помогу — только доверьтесь мне!</p>
       <div class="intro-actions" id="introChoice">
-        <button class="cta" id="introYes">Да, хочу в Telegram</button>
-        <button class="ghost-line" id="introNo">Нет, просто сыграть</button>
+        <button class="cta" id="introStart">Приступить к игре</button>
       </div>
     </div>
   </div>
