--- a/tic-tac-toe/public/index.html
+++ b/tic-tac-toe/public/index.html
@@ -33,12 +33,12 @@
     <header class="hero">
       <p class="eyebrow">3x3 тактика</p>
       <h1>Сыграем партию?</h1>
-      <p class="lede">Лёгкая игра на пару минут: твой ход — крестик, компьютер — нолик. Победа приносит промокод.</p>
+      <p class="lede">Лёгкая игра на пару минут: Ваш ход — крестик, компьютер — нолик. Победа приносит промокод.</p>
     </header>
 
     <section class="card">
       <div class="card-head">
-        <div class="status" id="status">Твой ход: крестики</div>
+        <div class="status" id="status">Ваш ход: крестики</div>
         <button class="ghost" id="resetBtn">Новая партия</button>
       </div>
 
@@ -55,7 +55,7 @@
       </div>
 
       <div class="legend">
-        <span class="pill">Ты — X</span>
+        <span class="pill">Вы — X</span>
         <span class="pill soft">Компьютер — O</span>
       </div>
     </section>
