Update intro heading

--- a/tic-tac-toe/public/index.html
+++ b/tic-tac-toe/public/index.html
@@ -19,7 +19,7 @@
   <div class="intro-overlay" id="introOverlay">
     <div class="intro-card">
       <p class="eyebrow">Добро пожаловать</p>
-      <h2>Добро пожаловать на моё тестовое.</h2>
+      <h2>Тестовое задание на вакансию «Full-stack разработчик / AI-разработчик / Вайбкодер / No-code разработчик»</h2>
       <p class="lede small">Моё резюме: <a class="link" href="https://clck.ru/3QmZh2" target="_blank" rel="noreferrer">clck.ru/3QmZh2</a></p>
       <p class="lede small">Промокод отправляется автоматически в моего TG-бота.</p>
       <p class="lede small">Если не сможете победить 3 раза подряд, я быстро помогу — только доверьтесь мне!</p>
